src/objects/Apttus_Config2__AttributeGroupTranslation__c.object
<CustomObject>
    <description>This object holds the translated values of attribute group object fields for all the languages</description>
    <fields>
        <fullName>Apttus_Config2__Language__c</fullName>
        <description>holds the language which the record belongs to</description>
        <inlineHelpText>holds the language which the record belongs to</inlineHelpText>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Name__c</fullName>
        <description>holds translated attribute group name</description>
        <inlineHelpText>holds translated attribute group name</inlineHelpText>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductAttributeGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Looks up to Product Attribute Group</description>
        <inlineHelpText>Looks up to Product Attribute Group</inlineHelpText>
        <label>Product Attribute Group</label>
        <referenceTo>Apttus_Config2__ProductAttributeGroup__c</referenceTo>
        <relationshipName>Translation</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Attribute Group Translation</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Translation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Group Translations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>